add StoreItem by Barcode
